--- a/src/style.css
+++ b/src/style.css
@@ -16,8 +16,13 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  html { filter: invert(1); }
-  img { filter: invert(1); }
+  html {
+    filter: invert(1);
+  }
+
+  img {
+    filter: invert(1);
+  }
 }
 
 .main {
@@ -60,21 +65,24 @@
 }
 
 .accordion:after {
-  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  content: '\02795';
+  /* Unicode character for "plus" sign (+) */
   color: #888;
   float: right;
   margin-left: 5px;
 }
 
 .active:after {
-  content: "\2796"; /* Unicode character for "minus" sign (-) */
+  content: "\2796";
+  /* Unicode character for "minus" sign (-) */
 }
 
 .active {
   background-color: #ccc;
 }
 
-.accordion:hover, .accordionitem:hover {
+.accordion:hover,
+.accordionitem:hover {
   background-color: #bbb;
 }
 
